Wed Mar 30 11:59:06 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed bug 169718 with ancestors in patterns
	  similar to same bug fixed in libxml2
	* tests/general/bug-160.*, tests/general/Makefile.am,
	  tests/docs/bug-160.*, tests/docs/Makefile.am: added test provided
	  by Aaron Kaplan

Tue Mar 29 22:35:14 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-159.*, tests/general/Makefile.am,
	  tests/docs/bug-159.*, tests/docs/Makefile.am: added test for
	  bug #168196 fixed in libxml2

Tue Mar 29 21:06:11 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: working around Mark Vakoc' reported bug related
	  to mode internaing
	* xsltproc/xsltproc.c: adding a --nodict mode to check problems with
	  document without a dictionnary.
	* tests/REC/Makefile.am tests/general/Makefile.am: testing without 
	  dictionnary

Tue Mar 29 15:37:13 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: fix bug #165201 when calling xsltInit() multiple
	  times.

Tue Mar 29 15:13:59 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c libxslt/xslt.c libxslt/xsltInternals.h: 
	  added DTD like checking when compiling stylesheets, closes
	  bug #160402 and a long term TODO
	* tests/general/bug-89.xsl: thos spotted a misconstruct of one
	  of the test cases where <xsl:when> was not within <xsl:choose>

Mon Mar 21 20:56:43 MST 2005 John Fleck (jfleck@inkstain.net)

	* doc/xsltproc.xml, xsltproc.html, xsltproc.1:
	update documentation to reflect addition of --nodtdattr
	command line flag. Bug #171098

Wed Mar 16 17:19:24 HKT 2005 William Brack (wbrack@mmm.com.hk)

	* libxslt/xslt.c: fixed problem with text node on stylesheet
	  document without a dictionary (bug 170533)

Sun Mar 13 20:08:34 CET 2005 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in doc/*: preparing 1.1.13, updated and rebuilt
	  the docs.
	* tests/plugins/Makefile.am xsltproc/Makefile.am: trying to fix