@@ -1,0 +1,5 @@
+<?xml version="1.0"?> 
+<foo> 
+        <element>x1</element> 
+        <xi:include href="x2.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/> 
+</foo> 
