@@ -1,0 +1,4 @@
+<?xml version="1.0"?> 
+<foo> 
+        <element>x2</element> 
+</foo>
